2003-11-14  Ben Elliston  <bje@wasabisystems.com>

	* config/tc-arm.c (arm_elf_change_section): Not static.

2003-11-13  Nick Clifton  <nickc@redhat.com>

	* tc-arm.c (mapping_state): New function.  Emit a mapping
	symbol if necessary.
        (arm_elf_change_section): New function.  Intercept section
	changes and generate mapping symbols.
        (s_bss): Likewise.
        (s_arm_elf_cons): Likewise.
        (opcode_select): Choose the correct mapping state.
        (md_assemble): Likewise.
        * tc-arm.h (md_elf_section_change_hook): Define.
        * doc/c-arm.texi (ARM Mapping Symbols): New node.
	* NEWS: Mention new feature.

2003-11-12  Daniel Jacobowitz  <drow@mvista.com>

	* Makefile.am (install, install-info, RECURSIVE_TARGETS): Define.
	* doc/Makefile.am (install-info): Define.

	* aclocal.m4: Regenerate.
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.

2003-11-11  Dmitry Semyonov <Dmitry.Semyonov@oktet.ru>

	* configure.in: Add support for arm-wince-pe target.
	* configure: Regenerate.

2003-11-11  Jan Hubicka  <jh@suse.cz>

	* config/tc-i386.c (tc_i386_fix_adjustable):

2003-11-10  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ia64.c (ia64_handle_align): Remove bogus be_nop.

2003-11-10  Alan Modra  <amodra@bigpond.net.au>

	* README: Update bug report address.  Move bug reporting info to
	binutils/README.

2003-11-07  Christian Groessler  <chris@groessler.org>

	* doc/c-z8k.texi: Document command-line options.  Fix byte
	register names.  Document '.z8001' and '.z8002' directives.
	Extend addressing modes documentation.

2003-11-07  Jonathan R. Grant  <jg-binutils@jguk.org>

	* input-file.c (input_file_open): Use "No such file" error
	message.

2003-11-06  Pete Gonzalez  <pgonzalez@bluel.com>

	* config/tc-arm.texi (struct reg_entry): Add new field 'builtin'.
	(rn_table, iwmmxt_table, cp_table, cn_table, fn_table, sn_table,
	dn_table, mav_mvf_table, mac_mvd_table, mav_mvfx_table,