@@ -1,3 +1,7 @@
+2003-11-15  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>
+
+	* config/tc-mips.c: Formatting fixes.
+
 2003-11-14  Ben Elliston  <bje@wasabisystems.com>
 
 	* config/tc-arm.c (arm_elf_change_section): Not static.
